--- a/task2/Dockerfile
+++ b/task2/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /home/mydocker
 
 COPY MyApplication.java .
 
-RUN javac MyApplication.java
+RUN ["javac", "MyApplication.java"]
 
 CMD java MyApplication
